--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificador de Domínios</title>
+    <title>Verificador 4</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -71,7 +71,7 @@
     </style>
 </head>
 <body>
-    <h1>Verificador de Domínios</h1>
+    <h1>Verificador 4</h1>
     <div class="upload-area">
         <h3>Arraste seu arquivo Excel ou clique para selecionar</h3>
         <p>O arquivo deve ter os domínios na coluna B</p>
@@ -105,7 +105,7 @@
         // Função melhorada para limpar cache
         async function clearCache() {
             try {
-                const response = await fetch('https://verificador-dominios-v4.vercel.app/api/clear-cache', {
+                const response = await fetch('https://verificador4.vercel.app/api/clear-cache', {
                     method: 'POST',
                     headers: {
                         'Accept': 'application/json',
@@ -150,14 +150,18 @@
             formData.append('file', file);
 
             loading.style.display = 'block';
-            progress.innerHTML = '<div class="spinner"></div>Iniciando processamento...';
+            progress.innerHTML = `
+                <div class="spinner"></div>
+                <p>Arquivo selecionado: <strong>${file.name}</strong></p>
+                Iniciando processamento...
+            `;
             results.innerHTML = '';
             clearButton.style.display = 'inline-block';
             fileInput.disabled = true;
             isProcessing = true;
 
             try {
-                const response = await fetch('https://verificador-dominios-v4.vercel.app/api/upload-excel', {
+                const response = await fetch('https://verificador4.vercel.app/api/upload-excel', {
                     method: 'POST',
                     body: formData
                 });
@@ -211,7 +215,7 @@
             if (!isProcessing) return false;
             
             try {
-                const response = await fetch('https://verificador-dominios-v4.vercel.app/api/progress', {
+                const response = await fetch('https://verificador4.vercel.app/api/progress', {
                     method: 'GET',
                     headers: {
                         'Accept': 'application/json',
@@ -253,7 +257,7 @@
             results.innerHTML = `
                 <h3>Processamento concluído!</h3>
                 <div class="button-container">
-                    <a href="https://verificador-dominios-v4.vercel.app/api/download-results" class="download-button">
+                    <a href="https://verificador4.vercel.app/api/download-results" class="download-button">
                         Baixar Domínios Disponíveis
                     </a>
                     <button onclick="clearAndReset()" class="clear-button">
