Remove temporizador e simplifica mensagem de download

--- a/public/index.html
+++ b/public/index.html
@@ -260,6 +260,7 @@
         function showDownloadButton() {
             results.innerHTML = `
                 <h3>Processamento concluído!</h3>
+                <p style="color: #666;">O arquivo está pronto para download.</p>
                 <div class="button-container">
                     <a href="https://verificador4.vercel.app/api/download-results" class="download-button">
                         Baixar Domínios Disponíveis
